src/tests/testfiles/binary-operators/types-25.txt
Error at 2:5: Logic operator operands not compatible with int
"a" || "b";
^
